@@ -1,3 +1,6 @@
+26-Aug-2015 Geraldine
+	* Added lepton isolation variables in CRWT
+
 26-Aug-2015 Geraldine Conti
 	* Added reclustering and boson tagging variables in the ReclTree
 	* ZeroLeptonCR3L.cxx, ZeroLeptonCRY.cxx, ZeroLeptonCRZ.cxx,
